# dino-chrome-bot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICES.md  README.md  pyproject.toml
dino_chrome_bot/: main.py
